tests/ui/infinite/infinite-autoderef.stderr
error[E0275]: overflow setting `Box<_>` to a subtype of `_`
  --> $DIR/infinite-autoderef.rs:16:13
   |
LL |         x = Box::new(x);
   |             ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
